--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+    useLibrary 'org.apache.http.legacy'
+
 
     defaultConfig {
         applicationId "jp.com.beetracker"
@@ -29,4 +31,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile group: 'io.orchestrate', name: 'orchestrate-client', version: '0.11.0'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
